# osm_street_lamps

./: CMakeLists.txt  LICENSE  README.md  main.cpp
